--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <quack.version>1.2-SNAPSHOT</quack.version>
+        <quack.version>1.2</quack.version>
     </properties>
 
     <dependencies>
