Fix GPG for MAC

--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,10 @@
                         <version>1.5</version>
                         <configuration>
                             <passphrase>${gpg.passphrase}</passphrase>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
                         </configuration>
                         <executions>
                             <execution>
