--- a/pom.xml
+++ b/pom.xml
@@ -230,26 +230,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>import-maven-plugin</artifactId>
-                <version>${project.version}</version>
-                <configuration>
-                    <apiToken>abc</apiToken>
-                    <quackProject>quackui</quackProject>
-                    <apiEndpoint>http://quack.com/api/</apiEndpoint>
-                    <junitXmlResource>${project.build.directory}/surefire-reports</junitXmlResource>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>junit-results-import</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
             <!--<plugin>-->
                 <!--<groupId>${project.groupId}</groupId>-->
                 <!--<artifactId>import-maven-plugin</artifactId>-->
@@ -264,6 +244,26 @@
                         <!--<phase>process-test-classes</phase>-->
                         <!--<goals>-->
                             <!--<goal>junit-import</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+
+            <!--<plugin>-->
+                <!--<groupId>${project.groupId}</groupId>-->
+                <!--<artifactId>import-maven-plugin</artifactId>-->
+                <!--<version>${project.version}</version>-->
+                <!--<configuration>-->
+                    <!--<apiToken>abc</apiToken>-->
+                    <!--<quackProject>quackui</quackProject>-->
+                    <!--<apiEndpoint>http://quack.com/api/</apiEndpoint>-->
+                    <!--<junitXmlResource>${project.build.directory}/surefire-reports</junitXmlResource>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>test</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>junit-results-import</goal>-->
                         <!--</goals>-->
                     <!--</execution>-->
                 <!--</executions>-->
