--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -230,44 +231,44 @@
                 </configuration>
             </plugin>
 
-            <!--<plugin>-->
-                <!--<groupId>${project.groupId}</groupId>-->
-                <!--<artifactId>import-maven-plugin</artifactId>-->
-                <!--<version>${project.version}</version>-->
-                <!--<configuration>-->
-                    <!--<apiToken>abc</apiToken>-->
-                    <!--<quackProject>quackui</quackProject>-->
-                    <!--<apiEndpoint>http://quack.com/api/</apiEndpoint>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>process-test-classes</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>junit-import</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>import-maven-plugin</artifactId>
+                <version>${project.version}</version>
+                <configuration>
+                    <apiToken>abc</apiToken>
+                    <quackProject>autotests13</quackProject>
+                    <apiEndpoint>http://quack.com/api/</apiEndpoint>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>quack-testcases-import</id>
+                        <goals>
+                            <goal>junit-import</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
-            <!--<plugin>-->
-                <!--<groupId>${project.groupId}</groupId>-->
-                <!--<artifactId>import-maven-plugin</artifactId>-->
-                <!--<version>${project.version}</version>-->
-                <!--<configuration>-->
-                    <!--<apiToken>abc</apiToken>-->
-                    <!--<quackProject>quackui</quackProject>-->
-                    <!--<apiEndpoint>http://quack.com/api/</apiEndpoint>-->
-                    <!--<junitXmlResource>${project.build.directory}/surefire-reports</junitXmlResource>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>test</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>junit-results-import</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>import-maven-plugin</artifactId>
+                <version>${project.version}</version>
+                <configuration>
+                    <apiToken>abc</apiToken>
+                    <quackProject>autotests13</quackProject>
+                    <apiEndpoint>http://quack.com/api/</apiEndpoint>
+                    <junitXmlResource>${project.build.directory}/surefire-reports</junitXmlResource>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>quack-results-import</id>
+                        <goals>
+                            <goal>junit-results-import</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     
