--- a/pom.xml
+++ b/pom.xml
@@ -222,53 +222,53 @@
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
-                <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.20.1</version>-->
+                <!--<configuration>-->
+                    <!--<testFailureIgnore>true</testFailureIgnore>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
 
-            <plugin>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>import-maven-plugin</artifactId>
-                <version>${project.version}</version>
-                <configuration>
-                    <apiToken>abc</apiToken>
-                    <quackProject>autotests13</quackProject>
-                    <apiEndpoint>http://quack.com/api/</apiEndpoint>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>quack-testcases-import</id>
-                        <goals>
-                            <goal>junit-import</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>${project.groupId}</groupId>-->
+                <!--<artifactId>import-maven-plugin</artifactId>-->
+                <!--<version>${project.version}</version>-->
+                <!--<configuration>-->
+                    <!--<apiToken>abc</apiToken>-->
+                    <!--<quackProject>autotests13</quackProject>-->
+                    <!--<apiEndpoint>http://quack.com/api/</apiEndpoint>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>quack-testcases-import</id>-->
+                        <!--<goals>-->
+                            <!--<goal>junit-import</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
 
-            <plugin>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>import-maven-plugin</artifactId>
-                <version>${project.version}</version>
-                <configuration>
-                    <apiToken>abc</apiToken>
-                    <quackProject>autotests13</quackProject>
-                    <apiEndpoint>http://quack.com/api/</apiEndpoint>
-                    <junitXmlResource>${project.build.directory}/surefire-reports</junitXmlResource>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>quack-results-import</id>
-                        <goals>
-                            <goal>junit-results-import</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>${project.groupId}</groupId>-->
+                <!--<artifactId>import-maven-plugin</artifactId>-->
+                <!--<version>${project.version}</version>-->
+                <!--<configuration>-->
+                    <!--<apiToken>abc</apiToken>-->
+                    <!--<quackProject>autotests13</quackProject>-->
+                    <!--<apiEndpoint>http://quack.com/api/</apiEndpoint>-->
+                    <!--<junitXmlResource>${project.build.directory}/surefire-reports</junitXmlResource>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>quack-results-import</id>-->
+                        <!--<goals>-->
+                            <!--<goal>junit-results-import</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
     
