--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <quack.version>1.3-SNAPSHOT</quack.version>
+        <quack.version>1.3</quack.version>
     </properties>
 
     <dependencies>
